--- a/index.html
+++ b/index.html
@@ -24,21 +24,22 @@
 
     <!-- Semáforo -->
     <div id="semaforo" class="relative rounded-lg w-full h-[120px] flex bg-center bg-no-repeat bg-contain flex-shrink-0">
-        <img src="img/noche.jpg" id="semaforoImg" alt="Semáforo" class="h-full">
+        <img src="img/noche.jpg" id="semaforoImg" alt="Semáforo" class="h-full w-auto mx-auto my-auto">
     </div>
 
     <!-- Módulo de hora -->
-    <div id="hora" class="relative rounded-lg bg-white w-full h-[120px] shadow-md flex items-center justify-center">
-        <img src="img/noche.jpg" id="imagenHora" alt="Imagen de la hora" class="absolute top-0 left-0 h-full object-cover">
-        <div id="mostrarHora" class="text-3xl relative z-10">12:00 <small>PM</small></div>
+    <div id="hora" class="relative rounded-lg bg-white w-full h-[120px] shadow-md flex items-center justify-center overflow-hidden">
+        <img src="img/noche.jpg" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
+        <div id="mostrarHora" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10">12:00 <small>PM</small></div>
     </div>
+
 
     <!-- Módulo de clima -->
     <div id="clima" class="rounded-lg bg-white w-full h-[120px] shadow-md"></div>
     
     <!-- Calendario -->
     <div id="calendario" class="relative rounded-lg w-full h-[120px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/calendario.jpg');">
-        <div class="flex gap-[14px] absolute top-[82px] left-[53px]">
+        <div class="flex gap-[14px] absolute top-[82px] left-1/2 transform -translate-x-1/2 z-10">
             <div id="domingo" class="text-xl"></div>
             <div id="lunes" class="text-xl"></div>
             <div id="martes" class="text-xl"></div>
