--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Módulo de hora -->
     <div id="hora" class="relative rounded-lg bg-white w-full h-[120px] shadow-md flex items-center justify-center overflow-hidden">
         <img src="img/noche.jpg" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
-        <div id="mostrarHora" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10">12:00 <small>PM</small></div>
+        <div id="mostrarHora" class="absolute bottom-[-14px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10">12:00 <small>PM</small></div>
     </div>
 
 
