Fixed semaforo imgs

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <!-- Semáforo -->
     <div id="semaforo" class="relative rounded-lg w-full h-[120px] flex bg-center bg-no-repeat bg-contain flex-shrink-0">
-        <img src="img/noche.jpg" id="semaforoImg" alt="Semáforo" class="h-full w-auto mx-auto my-auto">
+        <img src="" id="semaforoImg" alt="Semáforo" class="h-full w-auto mx-auto my-auto">
     </div>
 
     <!-- Módulo de hora -->
     <div id="hora" class="relative rounded-lg bg-white w-full h-[120px] flex items-center justify-center overflow-hidden">
-        <img src="img/noche.jpg" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
+        <img src="" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
         <div id="mostrarHora" class="absolute bottom-[-14px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10">12:00 <small>PM</small></div>
     </div>
 
