--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <!-- Módulo de hora -->
     <div id="hora" class="relative rounded-lg bg-white w-full h-[113px] flex items-center justify-center overflow-hidden">
         <img src="" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
-        <div id="mostrarHora" class="absolute bottom-[-14px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10">12:00 <small>PM</small></div>
+        <div id="mostrarHora" class="absolute bottom-[-26px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-5xl z-10 font-bold flex gap-2 items-end">00:00 <small style="position: relative; top:-2px">AM</small></div>
     </div>
 
 
     <!-- Módulo de clima -->
-    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/clima-lock.jpg'); background-color: #f5ebff;">
+    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex-shrink-0" style="background-image: url('img/clima-lock.jpg'); background-color: #f5ebff;">
     </div>
     
     <!-- Calendario -->
