--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- Módulo de clima -->
     <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex-shrink-0" style="background-image: url('img/clima-lock.jpg'); background-color: #f5ebff;">
+        <span>--</span>
     </div>
     
     <!-- Calendario -->
