--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
 
     <!-- Módulo de clima -->
-    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex-shrink-0" style="background-image: url('img/clima-lock.jpg'); background-color: #f5ebff;">
-        <span>--</span>
+    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex justify-center relative" style="background-image: url('img/clima-lock.jpg'); background-color: #f5ebff; padding-top: 15px">
+        <div class="bg-black w-[229px] h-[55px] mr-[2px] relative">
+            <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">89</span>
+        </div>
     </div>
     
     <!-- Calendario -->
