--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
 
 
     <!-- Módulo de clima -->
-    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex justify-center relative" style="background-image: url('img/clima-lock.jpg'); background-color: #f5ebff; padding-top: 15px">
-        <div class="bg-black w-[229px] h-[55px] mr-[2px] relative">
-            <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">89</span>
+    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex justify-center relative bg-purple-300 pt-[15px]" style="background-image: url('img/clima.jpg');">
+        <div class="w-[260px] h-[55px] relative">
+            <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">--</span>
         </div>
     </div>
     
     <!-- Calendario -->
     <div id="calendario" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/calendario.jpg');">
-        <div class="flex gap-[12px] absolute top-[82px] left-1/2 transform -translate-x-1/2 z-10">
-            <div id="domingo" class="text-xl font-bold"></div>
-            <div id="lunes" class="text-xl font-bold"></div>
-            <div id="martes" class="text-xl font-bold"></div>
-            <div id="miercoles" class="text-xl font-bold"></div>
-            <div id="jueves" class="text-xl font-bold"></div>
-            <div id="viernes" class="text-xl font-bold"></div>
-            <div id="sabado" class="text-xl font-bold"></div>
+        <div class="w-[232px] flex justify-between absolute top-[78px] left-1/2 transform -translate-x-1/2 z-10">
+            <div id="domingo" class="text-2xl font-bold"></div>
+            <div id="lunes" class="text-2xl font-bold"></div>
+            <div id="martes" class="text-2xl font-bold"></div>
+            <div id="miercoles" class="text-2xl font-bold"></div>
+            <div id="jueves" class="text-2xl font-bold"></div>
+            <div id="viernes" class="text-2xl font-bold"></div>
+            <div id="sabado" class="text-2xl font-bold"></div>
         </div>
     </div>
 
