--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         }
     </style>
 </head>
-<body class="flex flex-col bg-white p-3 gap-3 justify-start">
+<body class="flex flex-col bg-white p-3 gap-3 justify-start relative">
+
+    <div id="version" class="text-white text-md absolute top-4 left-5 z-10"></div>
 
     <!-- Semáforo -->
     <div id="semaforo" class="relative rounded-lg w-full h-[113px] flex bg-center bg-no-repeat bg-contain flex-shrink-0">
