--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 <body class="flex flex-col bg-white p-3 gap-3 justify-start relative">
 
+    <div id="cortina" class="absolute top-0 left-0 w-screen h-screen z-20 bg-black hidden"></div>
+
     <div id="version" class="text-white text-md absolute top-4 left-5 z-10"></div>
 
     <!-- Semáforo -->
