--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     
     <!-- Calendario -->
     <div id="calendario" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/calendario.jpg');">
-        <div class="w-[232px] flex justify-between absolute top-[78px] left-1/2 transform -translate-x-1/2 z-10">
-            <div id="domingo" class="text-2xl font-bold"></div>
-            <div id="lunes" class="text-2xl font-bold"></div>
-            <div id="martes" class="text-2xl font-bold"></div>
-            <div id="miercoles" class="text-2xl font-bold"></div>
-            <div id="jueves" class="text-2xl font-bold"></div>
-            <div id="viernes" class="text-2xl font-bold"></div>
-            <div id="sabado" class="text-2xl font-bold"></div>
+        <div class="w-[240px] flex justify-between absolute top-[78px] left-1/2 transform -translate-x-1/2 z-10">
+            <div id="domingo" class="w-full text-center text-2xl font-bold"></div>
+            <div id="lunes" class="w-full text-center text-2xl font-bold"></div>
+            <div id="martes" class="w-full text-center text-2xl font-bold"></div>
+            <div id="miercoles" class="w-full text-center text-2xl font-bold"></div>
+            <div id="jueves" class="w-full text-center text-2xl font-bold"></div>
+            <div id="viernes" class="w-full text-center text-2xl font-bold"></div>
+            <div id="sabado" class="w-full text-center text-2xl font-bold"></div>
         </div>
     </div>
 
