--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>DashTodd</title>
     <meta name="description" content="Dashboard interactivo para niños">
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Agregamos Vue.js desde el CDN -->
-    <script src="https://unpkg.com/vue@3"></script>
-
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,36 +19,41 @@
         }
     </style>
 </head>
-<body id="app" class="flex flex-col bg-white p-3 gap-2 justify-start relative">
+<body class="flex flex-col bg-white p-3 gap-2 justify-start relative">
 
-    <div v-if="showCortina" id="cortina" class="absolute top-0 left-0 w-screen h-screen z-20 bg-black"></div>
+    <div id="cortina" class="absolute top-0 left-0 w-screen h-screen z-20 bg-black hidden"></div>
 
-    <div id="version" class="text-white text-md absolute top-4 left-5 z-10">v{{ version }}</div>
+    <div id="version" class="text-white text-md absolute top-4 left-5 z-10"></div>
 
     <!-- Semáforo -->
-    <div id="semaforo" class="relative rounded-lg w-full h-[113px] flex bg-center bg-no-repeat bg-contain flex-shrink-0" :class="semaforoClass">
-        <img :src="semaforoImg" alt="Semáforo" class="h-full w-auto mx-auto my-auto">
+    <div id="semaforo" class="relative rounded-lg w-full h-[113px] flex bg-center bg-no-repeat bg-contain flex-shrink-0">
+        <img src="" id="semaforoImg" alt="Semáforo" class="h-full w-auto mx-auto my-auto">
     </div>
 
     <!-- Módulo de hora -->
-    <div id="hora" class="relative rounded-lg bg-white w-full h-[113px] flex items-center justify-center overflow-hidden" :class="horaClass">
-        <img :src="horaImg" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
-        <div id="mostrarHora" class="absolute bottom-[-26px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-5xl z-10 font-bold flex gap-2 items-end">
-            {{ formattedTime }} <small style="position: relative; top:-2px">{{ ampm }}</small>
-        </div>
+    <div id="hora" class="relative rounded-lg bg-white w-full h-[113px] flex items-center justify-center overflow-hidden">
+        <img src="" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
+        <div id="mostrarHora" class="absolute bottom-[-26px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-5xl z-10 font-bold flex gap-2 items-end">00:00 <small style="position: relative; top:-2px">AM</small></div>
     </div>
+
 
     <!-- Módulo de clima -->
     <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex justify-center relative bg-purple-300 pt-[15px]" style="background-image: url('img/clima.jpg');">
         <div class="w-[260px] h-[55px] relative">
-            <span :style="{ left: temperaturePosition }" class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">{{ temperatureDisplay }}</span>
+            <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">--</span>
         </div>
     </div>
-
+    
     <!-- Calendario -->
     <div id="calendario" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/calendario.jpg');">
         <div class="w-[240px] flex justify-between absolute top-[78px] left-1/2 transform -translate-x-1/2 z-10">
-            <div v-for="(day, index) in weekDays" :key="index" :class="{ 'text-red-500': index === currentDay }" class="w-full text-center text-2xl font-bold">{{ day }}</div>
+            <div id="domingo" class="w-full text-center text-2xl font-bold"></div>
+            <div id="lunes" class="w-full text-center text-2xl font-bold"></div>
+            <div id="martes" class="w-full text-center text-2xl font-bold"></div>
+            <div id="miercoles" class="w-full text-center text-2xl font-bold"></div>
+            <div id="jueves" class="w-full text-center text-2xl font-bold"></div>
+            <div id="viernes" class="w-full text-center text-2xl font-bold"></div>
+            <div id="sabado" class="w-full text-center text-2xl font-bold"></div>
         </div>
     </div>
 
