--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <div id="cortina" class="absolute top-0 left-0 w-screen h-screen z-20 bg-black hidden"></div>
 
+    <div id="recoger" class="absolute top-0 left-0 w-screen h-screen z-20 bg-white flex justify-center items-center hidden">
+        <img src="assets/cleanup.jpg">
+    </div>
+
     <div id="version" class="text-white text-md absolute top-[12px] left-[18px] z-10"></div>
 
     <!-- Semáforo -->
