--- a/index.html
+++ b/index.html
@@ -45,10 +45,16 @@
 
 
     <!-- Módulo de clima -->
-    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain flex justify-center relative bg-purple-300 pt-[15px]" style="background-image: url('img/clima.jpg');">
-        <div class="w-[260px] h-[55px] relative">
-            <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">--</span>
+    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-1 flex justify-center relative bg-purple-300" >
+        <div class="w-[260px] bg-center bg-no-repeat bg-contain pt-[15px]" style="background-image: url('img/clima.jpg');">
+            <div class="w-[260px] h-[55px] relative">
+                <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">--</span>
+            </div>
         </div>
+
+        <img id="fan" src="./img/fan.svg" class="w-[60px]">
+
+        <div id="airSpeed" class="text-white text-md absolute top-[1px] right-[7px] z-10"></div>
     </div>
     
     <!-- Calendario -->
