--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="assets/cleanup.jpg">
     </div>
 
-    <div id="version" class="text-white text-md absolute top-[12px] left-[18px] z-10"></div>
+    <div id="version" class="text-white text-lg absolute top-[12px] left-[18px] z-10"></div>
 
     <!-- Semáforo -->
     <div id="semaforo" class="relative rounded-lg w-full h-[113px] flex bg-center bg-no-repeat bg-contain flex-shrink-0 justify-center">
@@ -54,7 +54,7 @@
 
         <img id="fan" src="./img/fan.svg" class="w-[60px]">
 
-        <div id="airSpeed" class="text-white text-md absolute top-[1px] right-[7px] z-10"></div>
+        <div id="airSpeed" class="text-white text-md absolute top-[42px] right-[22px] z-10 bg-black w-7 h-7 rounded-full border-purple-300 border-[2px] flex items-center justify-center"></div>
     </div>
     
     <!-- Calendario -->
