--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     </div>
 
     <!-- Módulo de hora -->
-    <div id="hora" class="relative rounded-lg bg-white w-full h-[113px] flex items-center justify-center overflow-hidden">
-        <img src="" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
-        <div id="mostrarHora" class="absolute bottom-[-24px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-5xl z-10 font-bold flex gap-2 items-end">00:00 <small style="position: relative; top:-2px">AM</small></div>
+    <div id="hora" class="rounded-lg bg-white w-full h-[113px] flex items-center justify-center overflow-hidden relative">
+            <img src="" id="imagenHora" alt="Imagen de la hora" class="absolute inset-0 w-auto h-full mx-auto">
+            <div id="mostrarHora" class="absolute bottom-[-24px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-5xl z-10 font-bold flex gap-2 items-end">00:00 <small style="position: relative; top:-2px">AM</small></div>
+        <img id="icon" class="absolute top-[10px] right-[10px] w-[50px]" />
     </div>
 
 
@@ -58,8 +59,8 @@
     </div>
     
     <!-- Calendario -->
-    <div id="calendario" class="relative rounded-lg w-full h-[113px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/calendario.jpg');">
-        <div class="w-[336px] flex justify-between absolute top-[73px] left-1/2 transform -translate-x-1/2 z-10">
+    <div id="calendario" class="relative rounded-lg w-full h-[190px] flex gap-2 bg-center bg-no-repeat bg-contain bg-gray-200 flex-shrink-0" style="background-image: url('img/calendario.jpg');">
+        <div class="w-[336px] flex justify-between absolute top-[76px] left-1/2 transform -translate-x-1/2 z-10">
             <div id="domingo" class="w-full text-center text-3xl font-bold"></div>
             <div id="lunes" class="w-full text-center text-3xl font-bold"></div>
             <div id="martes" class="w-full text-center text-3xl font-bold"></div>
