--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- Módulo de clima -->
-    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-1 flex justify-center relative bg-purple-300" >
+    <div id="clima" class="relative rounded-lg w-full h-[113px] flex gap-1 flex justify-center relative bg-purple-300 overflow-hidden" >
         <div class="w-[260px] bg-center bg-no-repeat bg-contain pt-[15px]" style="background-image: url('img/clima.jpg');">
             <div class="w-[260px] h-[55px] relative">
                 <span class="absolute top-1/2 -translate-y-1/2 rounded-full w-10 h-10 bg-white flex justify-center items-center font-bold text-2xl pt-[3px]">--</span>
@@ -71,9 +71,9 @@
         </div>
 
 
-        <div id="event-1" class="text-center text-3xl font-bold text-white absolute bottom-[42px] left-[117px]">20<span class="text-lg">D</span></div>
+        <div id="event-1" class="w-[53px] text-center text-3xl font-bold text-white absolute bottom-[41px] left-[113px]"></div>
 
-        <div id="event-2" class="text-center text-3xl font-bold text-white absolute bottom-[42px] left-[283px]">26<span class="text-lg">D</span></div>
+        <div id="event-2" class="w-[53px] text-center text-3xl font-bold text-white absolute bottom-[41px] left-[279px]"></div>
 
     </div>
 
