--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
 
-        <div id="event-1" class="w-[53px] text-center text-3xl font-bold text-white absolute bottom-[41px] left-[113px]"></div>
+        <div id="event-1" class="w-[53px] text-center text-3xl font-bold text-white absolute bottom-[41px] left-[113px] hidden"></div>
 
         <div id="event-2" class="w-[53px] text-center text-3xl font-bold text-white absolute bottom-[41px] left-[279px]"></div>
 
